--- a/index.html
+++ b/index.html
@@ -2,12 +2,48 @@
 <html>
 <head>
   <title>Happy 22nd Birthday, Nadine!</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f3e6;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1, h2 {
+      color: #ff4500;
+      text-align: center;
+    }
+
+    p {
+      line-height: 1.5;
+    }
+
+    ul {
+      list-style-type: disc;
+      margin-left: 20px;
+    }
+
+    .birthday-image {
+      display: block;
+      margin: 20px auto;
+      max-width: 400px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
 <body>
   <h1>Happy 22nd Birthday, Nadine!</h1>
   
   <h2>My Wish for You:</h2>
-  <p>May your birthday be filled with love, joy, and happiness. May all your dreams and wishes come true. You deserve all the best in life. Happy birthday, my love!</p>
+  <p>
+    May your birthday be filled with love, joy, and happiness.
+    May all your dreams and wishes come true.
+    You deserve all the best in life.
+    Happy birthday, my love!
+  </p>
   
   <h2>Reasons Why I Love You:</h2>
   <ul>
@@ -19,6 +55,16 @@
   </ul>
   
   <h2>A Little Story from Me:</h2>
-  <p>Once upon a time, I met the most amazing person in the world. That person was you, Nadine. From the moment we met, I knew there was something special about you. We have shared so many incredible moments together, and each day spent with you is a blessing. You have brought so much love and laughter into my life, and I can't imagine my life without you. Happy birthday, my sweetheart!</p>
+  <p>
+    Once upon a time, I met the most amazing person in the world.
+    That person was you, Nadine.
+    From the moment we met, I knew there was something special about you.
+    We have shared so many incredible moments together, and each day spent with you is a blessing.
+    You have brought so much love and laughter into my life, and I can't imagine my life without you.
+    Happy birthday, my sweetheart!
+  </p>
+  
+  <img class="birthday-image" src="https://example.com/path/to/image1.jpg" alt="Birthday Image 1">
+  <img class="birthday-image" src="https://example.com/path/to/image2.jpg" alt="Birthday Image 2">
 </body>
 </html>
