--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">B</h2>
     </div>
 	<div class="balloons text-center" id="b5">
     	<h2 style="color:#8377E4;">O</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">Y</h2>
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;">A</h2>
@@ -156,15 +156,15 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
+					<button class="btn btn-primary" id="turn_on">Kuti dulu tu lampu</button>
+					<button class="btn btn-primary" id="play">Putar lagi gak sihhh?</button>
+					<button class="btn btn-primary" id="bannar_coming">Dekor dlu supaya gaga</button>
+					<button class="btn btn-primary" id="balloons_flying">Ada balon coba se terbang</button>
+					<button class="btn btn-primary" id="cake_fadein">Kukis Paling Ena Sedunia</button>
+					<button class="btn btn-primary" id="light_candle"> Semenyala Lilin</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday Boya</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
+					<!-- <button class="btn btn-primary" id="cake_cut">Potong kukis xixi</button> -->
 				</div>
 			</div>
 			<!-- <div class="col-md-2">
