--- a/index.html
+++ b/index.html
@@ -104,53 +104,31 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
+				<p>Haiii boya...</p>
+				<p>Ih kataaa so 22 tahun</p>
+				<p>Nd bosan jo tu hidop? :p</p>
+				<p>Selamat ulang Tahun Geneviene Boya Didot</p>
+				<p>Selalu berterima kasih karena...s</p>
+				<p><strong>Boya selalu hebat</strong></p>
+				<p>Dengan selalu jadi yang terbaik pa semua orang</p>
+				<p>Banya pergumulan kang ini?</p>
+				<p>Apalagi mahasiswa semester akhir</p>
+				<p>I know your biggest wish right now</p>
+				<p>Boleh selesai TA rite?</p>
+				<p>Sama bey le berharap yang sama</p>
+				<p>Tetap semangat TA ne, ada aku di belakangmu</p>
+				<p>Selalu ingat penyertaan Tuhan ne</p>
+				<p>Tuhan Yesus Baik</p>
+				<p>Dia so jaga boya sampe 22 tahun</p>
+				<p>Keep going, keep growing</p>
+				<p>God bless U</p>
+				<p>And.....</p>
+				<p>I love U</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>a very happy birthday Geneviene Nadine Debora Biring</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -160,7 +138,7 @@
 					<button class="btn btn-primary" id="play">Putar lagi gak sihhh?</button>
 					<button class="btn btn-primary" id="bannar_coming">Dekor dlu supaya gaga</button>
 					<button class="btn btn-primary" id="balloons_flying">Ada balon coba se terbang</button>
-					<button class="btn btn-primary" id="cake_fadein">Kukis Paling Ena Sedunia</button>
+					<button class="btn btn-primary" id="cake_fadein"> Woi kita da beking Kukis Paling Ena Sedunia</button>
 					<button class="btn btn-primary" id="light_candle"> Semenyala Lilin</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday Boya</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
