--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<p>Ih kataaa so 22 tahun</p>
 				<p>Nd bosan jo tu hidop? :p</p>
 				<p>Selamat ulang Tahun Geneviene Boya Didot</p>
-				<p>Selalu berterima kasih karena...s</p>
+				<p>Selalu berterima kasih karena...</p>
 				<p><strong>Boya selalu hebat</strong></p>
 				<p>Dengan selalu jadi yang terbaik pa semua orang</p>
 				<p>Banya pergumulan kang ini?</p>
